Add font-weight for the `app-datepicker` component

--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -32,9 +32,17 @@
                 --app-datepicker-selected-day-bg: #179EFF;
                 --app-datepicker-today-color: #179EFF;
                 --app-datepicker-date-hover-background-color: #179EFF;
+
+                --app-datepicker-selected-date: {
+                    font-weight: normal;
+                    font-size: 22px;
+                };
+
+                --app-datepicker-selected-year: {
+                    font-weight: normal;
+                }
             }
         </style>
-
         <app-location route="{{route}}"
                       use-hash-as-path></app-location>
 
