Add currency icon

--- a/client/user/src/mealorder/menu/meal-order-user-cart.html
+++ b/client/user/src/mealorder/menu/meal-order-user-cart.html
@@ -53,7 +53,7 @@
                 <template>
                     <div class="total">
                         <div class="amount">Общая сумма:</div>
-                        <div class="price">[[total]]</div>
+                        <div class="price">[[total]] ₴</div>
                     </div>
                 </template>
             </dom-if>
