--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -54,10 +54,10 @@
 
         <iron-pages
                 selected="[[routeData.page]]"
-                attr-for-selected="name"
+                attr-for-selected="data-page"
                 fallback-selection="view404"
                 role="main">
-            <app-datepicker name="history" id="date-picker" view="vertical"
+            <app-datepicker data-page="history" id="date-picker" view="vertical"
                             input-date="[[inputDate]]" date="{{outputDate}}" auto-update-date="true"
                             locale="ru-RU"></app-datepicker>
         </iron-pages>
@@ -104,33 +104,39 @@
 
             _changeHistoryUrl() {
                 if (this.routeData.page && this.routeData.page.startsWith("history")) {
+                    const YEAR = 0;
+                    const MONTH = 1;
+                    const DAY = 2;
+
                     const routeDate = this.routeData.date.split('-');
-                    this.set('inputDate', routeDate[0] + "/" + routeDate[1] + "/" + routeDate[2]);
+                    this.set('inputDate', routeDate[YEAR] + "/" + routeDate[MONTH] + "/" + routeDate[DAY]);
                     const arr = this.routeData.date.split('-');
                     const date = {};
-                    date.year = arr[0];
-                    date.month = arr[1];
-                    date.day = arr[2];
+                    date.year = arr[YEAR];
+                    date.month = arr[MONTH];
+                    date.day = arr[DAY];
                     this.dispatchEvent(new CustomEvent('changed-history-date', {detail: date}));
                 }
             }
 
             _updateDate() {
                 if (this.routeData.page && this.routeData.page.startsWith("history")) {
+                    const YEAR = 0;
+                    const MONTH = 1;
+                    const DAY = 2;
+
                     const arr = this.outputDate.split('/');
                     const date = {};
-                    date.year = arr[0];
-                    date.month = arr[1];
-                    date.day = arr[2];
+                    date.year = arr[YEAR];
+                    date.month = arr[MONTH];
+                    date.day = arr[DAY];
                     const newRouteData = {};
                     newRouteData.page = 'history';
                     newRouteData.date = date.year + "-" + date.month + "-" + date.day;
                     this.set('routeData', newRouteData);
-                    this.dispatchEvent(new CustomEvent('changed-history-date', {detail: date}));
                 }
             }
         }
-
         window.customElements.define(MealOrderDrawer.is, MealOrderDrawer);
     </script>
 </dom-module>
