--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -17,9 +17,10 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
+<link rel="import" href="../meal-order-app-namespace.html">
+
 <script>
     {
-        window.MealOrderApp = window.MealOrderApp || {};
         const initialState = {};
         MealOrderApp.reducer = (state, action) => {
             if (!state) {
