--- a/client/user/src/mealorder/shell/meal-order-app-namespace.html
+++ b/client/user/src/mealorder/shell/meal-order-app-namespace.html
@@ -17,20 +17,13 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-
-<link rel="import" href="../../../bower_components/polymer-redux/polymer-redux.html">
-<link rel="import" href="reducers/reducers.html">
 <script>
-    {
-
-        /* global Redux, PolymerRedux */
-        const store = Redux.createStore(MealOrderApp.reducer);
-        MealOrderApp.store = store;
-        /**
-         * Redux mixin holds a state of the application.
-         * @polymer
-         * @mixinFunction
-         */
-        MealOrderApp.ReduxMixin = PolymerRedux(MealOrderApp.store);
-    }
+    // A bunch of elements, for zombies, by zombies.
+    //
+    /**
+     * A bunch of elements for meal order application.
+     *
+     * @namespace MealOrderApp
+     */
+    window.MealOrderApp = window.MealOrderApp || {};
 </script>
