Edit docs for main class

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -65,9 +65,9 @@
 
     <script>
         /**
-         * Main user meal order component.
+         * Main client meal order component.
          *
-         * Consists of 2 page:
+         * Consists of 2 pages:
          * 1. A page with vendor menus, and user's shopping cart.
          * 2. A page with user's history.
          *
