--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -19,11 +19,11 @@
   -->
 
 <script>
-    const UserAction = {
+    MealOrderApp.UserAction = {
         CHANGE_HISTORY_DAY: "CHANGE_HISTORY_DAY",
         MENU_FOR_DAY: "MENU_FOR_DAY",
         CART_FOR_DAY: 'CART_FOR_DAY',
-        REMOVE_DISH : "REMOVE_DISH"
+        REMOVE_DISH : "REMOVE_DISH",
         CHANGE_CURRENT_MENU: "CHANGE_CURRENT_MENU",
         CHANGE_CURRENT_CART: 'CHANGE_CURRENT_CART',
         ADD_DISH: 'ADD_DISH',
