--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -23,6 +23,7 @@
 <link rel="import" href="../../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../../../bower_components/paper-styles/color.html">
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../shell/actions/user-actions.html">
 <dom-module id="meal-order-menu-container">
@@ -32,8 +33,8 @@
                 -webkit-font-smoothing: antialiased;
                 width: 100%;
                 margin-bottom: 1px;
-                --paper-tabs-selection-bar-color: #179EFF;
-                --paper-tab-ink: #179EFF;
+                --paper-tabs-selection-bar-color: var(--paper-light-blue-500);
+                --paper-tab-ink: var(--paper-light-blue-500);
             }
 
             paper-tabs {
@@ -42,11 +43,11 @@
             }
 
             paper-tab.iron-selected .day-of-the-week {
-                color: #179EFF;
+                color: var(--paper-light-blue-500);
             }
 
             paper-tab.iron-selected .day {
-                color: #179EFF;
+                color: var(--paper-light-blue-500);
             }
 
             paper-tab .paper-tab-container {
@@ -58,11 +59,11 @@
             }
 
             .disabled .day {
-                color: #8c8c8c;
+                color: var(--paper-grey-500);
             }
 
             .disabled .day-of-the-week {
-                color: #8c8c8c;
+                color: var(--paper-grey-500);
             }
 
             .day-of-the-week {
@@ -135,7 +136,6 @@
          * @polymer
          * @appliesMixin MealOrderApp.ReduxMixin
          */
-        /* @polymerMixin */
         class MealOrderMenuContainer extends MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-menu-container';
