--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -38,15 +38,15 @@
                 font-size: 15px;
                 padding: 0 2%;
                 width: 96%;
-                border-bottom: 1px solid #ddd;
+                border-bottom: 1px solid var(--paper-grey-200);
             }
 
             .menu-dishes {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                border-top: 1px solid #fcfcfc;
-                border-bottom: 1px solid #fcfcfc;
+                border-top: 1px solid var(--paper-grey-50);
+                border-bottom: 1px solid var(--paper-grey-50);
             }
 
             .wrapper {
