--- a/client/user/index.html
+++ b/client/user/index.html
@@ -33,6 +33,7 @@
         body {
             font-family: 'Roboto', 'Noto', sans-serif;
             background-color: var(--paper-grey-100);
+            color: var(--google-grey-700);
         }
     </style>
 </head>
