--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -29,13 +29,8 @@
 <dom-module id="meal-order-vendor-menu">
     <template>
         <style>
-            :host {
-                display: block;
-                padding: 0;
-            }
-
             paper-item {
-                font-size: 15px;
+                @apply --paper-font-body1;
                 padding: 0 2%;
                 width: 96%;
                 border-bottom: 1px solid var(--paper-grey-200);
@@ -64,6 +59,7 @@
             .header paper-item {
                 padding: 2px 1% 2px 2%;
             }
+
             .bold {
                 font-weight: bold;
             }
@@ -98,7 +94,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                font-size: 16px;
+                @apply --paper-font-subhead;
                 width: 100%;
             }
 
