--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,7 +22,8 @@
     MealOrderApp.UserAction = {
         CHANGE_CURRENT_MENU: "CHANGE_CURRENT_MENU",
         CHANGE_CURRENT_CART: 'CHANGE_CURRENT_CART',
-        REMOVE_DISH: 'REMOVE_DISH',
         ADD_DISH: 'ADD_DISH',
+        REMOVE_DISH: 'REMOVE_DISH',
+        REMOVE_DISHES_BY_VENDOR: 'REMOVE_DISHES_BY_VENDOR',
     }
 </script>
