--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -271,6 +271,12 @@
                         }
                     );
                 }
+                case MealOrderApp.UserAction.REMOVE_DISH: {
+                    return state;
+                }
+                case MealOrderApp.UserAction.REMOVE_DISHES_BY_VENDOR: {
+                    return state;
+                }
                 default : {
                     return state;
                 }
