--- a/client/user/src/mealorder/menu/meal-order-user-order.html
+++ b/client/user/src/mealorder/menu/meal-order-user-order.html
@@ -26,10 +26,6 @@
 <dom-module id="meal-order-user-order">
     <template>
         <style>
-            :host {
-                color: #4f4f4f;
-            }
-
             .order-details {
                 display: flex;
                 font-size: 15px;
@@ -63,7 +59,7 @@
         </style>
         <div class="vendor">
             <div>[[order.vendor]]</div>
-            <paper-icon-button icon="delete" class="icon-delete"></paper-icon-button>
+            <paper-icon-button icon="delete" class="icon-delete" on-click="_removeDishesByVendor"></paper-icon-button>
         </div>
         <dom-repeat items="[[order.dishes]]" as="dish">
             <template>
@@ -78,9 +74,7 @@
     </template>
     <script>
         /**
-         * user-cart is user's order for current date, for current vendor.
-         *
-         * <p>Is adopted for both desktop and mobile.
+         * user-order is user's order for current date, for current vendor.
          *
          * @customElement
          * @polymer
@@ -101,11 +95,15 @@
                 }
             }
 
+            _removeDishesByVendor() {
+                this.dispatchEvent(new CustomEvent('user-order-vendor-removed', {composed: true, detail: this.order.vendor}));
+            }
+
             _removeDish(e) {
                 const dish = {};
                 dish.vendor = this.order.vendor;
                 dish.name = this.order.dishes[e.model.index].title;
-                this.dispatchEvent(new CustomEvent('dish-removed', {composed: true, detail: dish}));
+                this.dispatchEvent(new CustomEvent('user-order-dish-removed', {composed: true, detail: dish}));
             }
         }
 
