--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -158,7 +158,14 @@
         </div>
     </template>
     <script>
-
+        /**
+         * meal-order-vendor-menu represents a menu of a vendor for a single day.
+         *
+         * Contains a list of categories with dish titles and prices.
+         *
+         * @customElement
+         * @polymer
+         */
         class MealOrderVendorMenu extends Polymer.Element {
             static get is() {
                 return 'meal-order-vendor-menu';
